# LinuxAuxVector

./: .gitignore  CMakeLists.txt  hwcap.c  hwcap.h  main.c
